--- a/MrCMS.Web/Apps/Core/Views/Shared/_BaseLayout.cshtml
+++ b/MrCMS.Web/Apps/Core/Views/Shared/_BaseLayout.cshtml
@@ -14,11 +14,14 @@
     <meta name="keywords" content="@(this.Keywords())" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @{
-        Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap.css");
-        Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap-theme.css");
-        Html.IncludeCss("~/Apps/Core/Content/Styles/style.css");
+        //Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap.css");
+        //Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap-theme.css");
+        //Html.IncludeCss("~/Apps/Core/Content/Styles/style.css");
     }
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    @{ Html.IncludeCss("~/Apps/Core/Content/Styles/style.css"); }
     @Styles.Render(AppStylesheetBundle.VirtualUrl)
+    @{ Html.IncludeCss("~/content/css/site.css"); }
     @{ Html.RenderCss(); }
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><script src="/Apps/Core/Content/Scripts/respond.min.js"></script><![endif]-->
