Admin Area, add css to increase ckEditor dropdown boxes width

--- a/MrCMS.Web/Areas/Admin/Content/Styles/mrcms-admin.css
+++ b/MrCMS.Web/Areas/Admin/Content/Styles/mrcms-admin.css
@@ -165,4 +165,13 @@ input.input-validation-error, select.input-validation-error { border: 1px solid 
 }
 
 
+/*======================
+   JJM ckEditor
+ ======================
+*/
+
+    /*Make Format & Styles DropDown boxes wider */
+        .cke_combopanel {
+            width: 250px!important;
+        }
 
