--- a/MrCMS.Web/Apps/Core/Views/Shared/__BaseLayout.cshtml
+++ b/MrCMS.Web/Apps/Core/Views/Shared/__BaseLayout.cshtml
@@ -13,12 +13,15 @@
     <meta name="description" content="@(this.Description())" />
     <meta name="keywords" content="@(this.Keywords())" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- /apps/core/views/shared/_BaseLayout -->
+
     @{
         //Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap.css");
         //Html.IncludeCss("~/Apps/Core/Content/bootstrap/css/bootstrap-theme.css");
         //Html.IncludeCss("~/Apps/Core/Content/Styles/style.css");
     }
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     @{ Html.IncludeCss("~/Apps/Core/Content/Styles/style.css"); }
     @Styles.Render(AppStylesheetBundle.VirtualUrl)
     @{ Html.IncludeCss("~/content/css/site.css"); }
