--- a/MrCMS.Web/Content/css/sass/partials/_home_DEA.scss
+++ b/MrCMS.Web/Content/css/sass/partials/_home_DEA.scss
@@ -3,98 +3,104 @@
 
 .page-home {
 
-    #page-home-hero {
-        background-image: url('../images/hero-house.jpg');
-        height: 70vh;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-    } 
+    #tpl-content {
+        margin-top: 3em;
+        margin-bottom: 3em;
+        //background-color: #242424;
+        padding: 1em;
+    }
 
-    #page-home-hero-reveal {
-        position: absolute;
-        right: 0;
-        bottom: 22%;
+    #services .item {
+        text-align: left;
+        padding-bottom: 2em;
+        padding: 1em 1.5em;
+        /*min-height: 490px;*/
+    }
 
-        //float: right;
-        //position: relative;
-        //top: 50%;
-        //transform: translateY(-50%);
+    #services .item .image-wrapper {
+        padding: 1em;
+    }
 
-        width: 50%;
-        padding: 2em;
-        background-color: rgba(255,255,255,.7);
+    #services .item img {
+        border-radius: 50%;
+        border: 2px solid #666;
+        max-width: 100%;
+        margin: 0 auto;
+    }
 
-        h1 {
-            color: rgb(30,54,108);
-            font-family: 'Open Sans', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-weight: 100;
-            text-align: center;
-            margin: 0;
-            //padding: 0 0 0 3em;
-        }
+    #services .item p {
+        height: 3.5em;
+    }
 
-        @include breakpoint($small) {
-            width:75%;
+    #services .item a {
+        margin-top: 2em;
+        //margin-bottom: 1.5em;
+        text-align: center;
+        padding: .6em 2em .6em 2em;
+    }
 
-             h1 { 
-                font-size: 1.2em;
+    #services .item ul {
+        margin-left: 0;
+        padding-left: 20px;
+    }
+
+    section {
+        overflow-x: hidden; 
+
+        .col-md-12 {
+            h2 {
+                text-align: center;
+            }
+
+            p {
+                text-align: center;
+                margin-bottom: 3em;
+                color: #727272;
             }
         }
     }
 
+    .bkgrd-theme {
+        background-color: #bc101a;
+        color: white;
+    }
 
-    .three-points {
-        font-size: 1.5em;
-        padding: 4em 0;
-        font-weight: 100;
-        font-family: 'Open Sans', 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    .bkgrd-section {
+        padding: 1em;
 
-        .icon {
-            font-size: 3em;
-            color: #cccccc;
-            text-align: center;
+        h2 {
+            font-size: 300%;
+            color: rgb(132,0,0);
+        }
+    }
+
+
+    .testimonials {
+        margin: 1em 0;
+
+        blockquote img {
+            border-radius: 50%;
+            float: right;
+            max-height: 100px;
+        }
+    }
+
+    .home-sections section {
+        padding: 3em 0;
+
+        @media screen and (max-width: 767px) {
+            padding: 1em 0;
         }
 
         .wrapper {
-            padding: 0 1em;
-            
-        }
-
-        .desc {
-            padding-top: 2em;
-        }
-
-        &.one {
-            background-color: #fff;
-        }
-
-        &.two {
-            background-color: #ebebeb;
-        }
-
-    }
-
-    .quoted-section {
-
-        background-color: #aaa7a7;
-        padding: 0;
-
-        .quote {
-            font-size: 1.8em;
-            font-weight: 100;
-            font-style: italic;
-            padding: 2em;
-            margin: 1em 0 0 0;
-            //font-color:
-
-        }
-
-        img {
-            padding: 3em 3em 0 2em;
+            padding: 1em;
         }
     }
 
+    .home-sections .text-section p,
+    .home-sections .text-section td {
+        font-size: 16px;
+    }
 }
 
 
