--- a/MrCMS.Web/Content/css/sass/partials/_footer.scss
+++ b/MrCMS.Web/Content/css/sass/partials/_footer.scss
@@ -3,9 +3,15 @@
 
 
 #tpl-footer {
-    background-color: #222;
+    background-color: $footer-background-color;
+    color: $footer-font-color;
     margin-top: 3em;
-    padding: 3em 2em 0 2em;
+    padding: 4em 0 0 0;
+
+
+    a {
+        color: black;
+    }
 
     .footer-menu {
         list-style: none;
@@ -33,15 +39,23 @@
         text-align: center;
         padding-top: 3em;
         color: #666;
+        font-size: 1em;
+        font-weight: 100;
+        font-style: italic;
         list-style: none;
         width: 100%;
 
+        ul {
+            padding: 0;
+        }
+
         li {
             display: inline-block;
-            border-left: solid 2px #444;
-            margin-left: 1em;
+            border-left: solid 2px #555;
+            margin-left: 0;
             padding: 0;
             padding-left: 1em;
+            padding-right: 1em;
             line-height: 1;
 
             &:first-child {
@@ -50,10 +64,10 @@
                 padding-left: 0;
             }
 
-            @media screen and (max-width: 767px) {
+            @include breakpoint($tablet) {
                 border: 0;
                 display: block;
-                margin: 0;
+                margin: 0 0 1em 0;
                 padding: 0;
             }
         }
@@ -62,9 +76,13 @@
 
     .middle {
         text-align: center;
+        
+        @include breakpoint($tablet) {
+            padding: 4em 0 5em 0;
+        }
 
         img {
-            opacity: .1;
+            opacity: .7;
             /*width: 50%;*/
             width: 80%;
         }
@@ -73,9 +91,15 @@
     .right {
         float: right;
         padding-right: 2em;
+        
+        @include breakpoint($tablet) {
+            float: none;
+            padding-right: 0;
+            padding-top: 3em;
+        }
     }
 
-    @media screen and (max-width: 767px) {
+    /*@media screen and (max-width: 767px) {
         .middle {
             padding: 4em 0 5em 0;
         }
@@ -84,7 +108,7 @@
             float: none;
             padding-right: 0;
         }
-    }
+    }*/
 
 }
 
@@ -213,20 +237,6 @@ ul.contact.social li {
 
 
 
-#tpl-content  {
-    min-height: 75vh;
-    margin-top: 75px;  /* allow for nav-fixed-top */
-    background-color: #000;
-}
-
-
-#tpl-content > :first-child,
-#tpl-content > :first-child > h1,
-#tpl-content > div > :first-child > h1,
-#tpl-content > h1  {
-    margin-top: 0;
-    margin-bottom: .8em;
-}
 
 
 
