--- a/MrCMS.Web/Content/css/site.css
+++ b/MrCMS.Web/Content/css/site.css
@@ -1,14 +1,21 @@
 body {
-  font-family: Roboto, 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  background-color: black;
-  color: #aaa;
+  font-family: "Open Sans", "Roboto", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, "Helvetica Neue", Arial, Helvetica, sans-serif;
+  background-color: #fff;
+  color: #333;
   /*rgb(170,170,170);*/
-  background: #000; }
+  font-size: 14px;
+  /* for sticky header */
+  /*margin-top: 150px;
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: Oswald, Arial, sans-serif;
-  font-weight: 700;
-  color: white; }
+        @include breakpoint($tablet) {
+            margin-top: 50px;
+        }*/ }
+
+h1, h2, h3, h4, h5, h6
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Roboto", Oswald, Arial, sans-serif;
+  font-weight: 300;
+  color: #1e366c; }
 
 h1, h2,
 .h1, .h2 {
@@ -35,10 +42,137 @@ a:hover.no-format,
   text-decoration: none;
   color: white; }
 
+nav {
+  font-family: 'Open Sans', 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, 'Helvetica Neue', Arial, Helvetica,  sans-serif;
+  font-weight: 100;
+  font-size: 1.2em;
+  /* 999 , h70*/ }
+  nav .navbar-brand {
+    padding: 2px;
+    display: block; }
+  nav .navbar-brand img {
+    height: 45px; }
+  @media (min-width: 770px) {
+    nav {
+      /* change to all (.navbar-h-expanded .navbar-nav > li) to (.navbar-h-expanded .navbar-nav > li > a) with line-height and remove padding-top to make hover entire top to bottom */
+      /*.navbar-brand,*/
+      /*nav.navbar-h-expanded.nav-sm .navbar-brand,*/ }
+      nav.navbar-h-expanded, nav.navbar-h-expanded.nav-sm {
+        transition: all 1.5s; }
+      nav.navbar-h-expanded,
+      nav.navbar-h-expanded .navbar-brand,
+      nav.navbar-h-expanded .navbar-nav > li {
+        transition: all 1.5s;
+        height: 150px;
+        /*padding-top: 30px;*/ }
+      nav.navbar-h-expanded .navbar-nav > li {
+        transition: all 1.5s;
+        /*line-height: 150px;*/
+        padding-top: 50px; }
+      nav.navbar-h-expanded .navbar-brand img {
+        /*height:80px;*/
+        height: 140px;
+        transition: all 1.5s;
+        padding-top: 5px;
+        margin-top: 0; }
+      nav.navbar-h-expanded.nav-sm,
+      nav.navbar-h-expanded.nav-sm .navbar-brand,
+      nav.navbar-h-expanded.nav-sm .navbar-nav > li {
+        transition: all 1.5s;
+        height: 50px;
+        padding-top: 0; }
+      nav.navbar-h-expanded.nav-sm .navbar-nav > li {
+        line-height: 50px; }
+      nav.navbar-h-expanded.nav-sm navbar,
+      nav.navbar-h-expanded.nav-sm .navbar-brand img {
+        height: 50px;
+        /*padding: 5px 5px;*/
+        padding: 1px 0;
+        margin-top: 0; }
+      nav.navbar-h-expanded .navbar-brand {
+        padding: 0;
+        padding-left: 5px; } }
+  @media (max-width: 999px) {
+    nav.navbar-h-expanded .navbar-brand img {
+      height: 70px;
+      margin-top: 35px; }
+    nav.navbar-h-expanded {
+      font-size: 1em !important; } }
+  @media (max-width: 769px) {
+    nav.navbar-h-expanded .navbar-brand img {
+      height: 100%;
+      margin-top: 0; }
+    nav .navbar-brand {
+      padding: 1px 1px 1px 5px; } }
+
+.navbar-default {
+  /*background-color: #ffe7a2 !important;*/
+  /*background-color: #dcedff;*/
+  background-color: #fff8e6;
+  /*border-color: #e7e7e7;*/ }
+
 #tpl-footer {
-  background-color: #222;
+  /*background-color: #dcedff;*/
+  /*border-color: #e7e7e7;*/
+  border-top: 1px solid #e7e7e7; }
+
+.navbar-default {
+  background-color: #fff8e6 !important; }
+
+/* Bootstrap nav override active */
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+  color: #555;
+  background-color: #ededed;
+  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.03);
+  /*background-color: transparent;
+            text-decoration: underline;*/ }
+
+/* Bootstrap nav override hover */
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+  color: #222;
+  background-color: transparent;
+  background-color: #d7d7d7;
+  background-color: rgba(0, 0, 0, 0.1); }
+
+#tpl-page-wrapper {
+  background-color: #fff; }
+
+#tpl-content-wrapper {
+  /* for sticky header */
+  padding-top: 150px; }
+  @media screen and (max-width: 768px) {
+    #tpl-content-wrapper {
+      padding-top: 50px; } }
+
+#tpl-content {
+  min-height: 35vh;
+  margin-top: 2em;
+  /*background-color: #000;*/ }
+  #tpl-content > :first-child,
+  #tpl-content > :first-child > h1,
+  #tpl-content > div > :first-child > h1,
+  #tpl-content > h1 {
+    margin-top: 0;
+    margin-bottom: .8em; }
+
+#tpl-footer {
+  background-color: #fff8e6;
+  color: #555;
   margin-top: 3em;
-  padding: 3em 2em 0 2em; }
+  padding: 4em 0 0 0;
+  /*@media screen and (max-width: 767px) {
+        .middle {
+            padding: 4em 0 5em 0;
+        }
+
+        .right {
+            float: none;
+            padding-right: 0;
+        }
+    }*/ }
+  #tpl-footer a {
+    color: black; }
   #tpl-footer .footer-menu {
     list-style: none; }
     #tpl-footer .footer-menu li {
@@ -57,40 +191,48 @@ a:hover.no-format,
     text-align: center;
     padding-top: 3em;
     color: #666;
+    font-size: 1em;
+    font-weight: 100;
+    font-style: italic;
     list-style: none;
     width: 100%; }
+    #tpl-footer .copyright ul {
+      padding: 0; }
     #tpl-footer .copyright li {
       display: inline-block;
-      border-left: solid 2px #444;
-      margin-left: 1em;
+      border-left: solid 2px #555;
+      margin-left: 0;
       padding: 0;
       padding-left: 1em;
+      padding-right: 1em;
       line-height: 1; }
       #tpl-footer .copyright li:first-child {
         border-left: 0;
         margin-left: 0;
         padding-left: 0; }
-      @media screen and (max-width: 767px) {
+      @media screen and (max-width: 768px) {
         #tpl-footer .copyright li {
           border: 0;
           display: block;
-          margin: 0;
+          margin: 0 0 1em 0;
           padding: 0; } }
   #tpl-footer .middle {
     text-align: center; }
+    @media screen and (max-width: 768px) {
+      #tpl-footer .middle {
+        padding: 4em 0 5em 0; } }
     #tpl-footer .middle img {
-      opacity: .1;
+      opacity: .7;
       /*width: 50%;*/
       width: 80%; }
   #tpl-footer .right {
     float: right;
     padding-right: 2em; }
-  @media screen and (max-width: 767px) {
-    #tpl-footer .middle {
-      padding: 4em 0 5em 0; }
-    #tpl-footer .right {
-      float: none;
-      padding-right: 0; } }
+    @media screen and (max-width: 768px) {
+      #tpl-footer .right {
+        float: none;
+        padding-right: 0;
+        padding-top: 3em; } }
 
 ul.contact {
   list-style: none;
@@ -146,10 +288,10 @@ ul.contact.social li {
     text-align: center;
     border-radius: 50%;
     background-color: #383838;
-    color: #aaa; }
+    color: #333; }
     ul.contact.social li a:hover {
-      color: white;
-      background: #515151; }
+      color: #8c8c8c;
+      background: black; }
 
 /*ul.contact.social li {
     display: inline-block;
@@ -187,19 +329,6 @@ ul.contact.social li {
         }
     }
 }*/
-#tpl-content {
-  min-height: 75vh;
-  margin-top: 75px;
-  /* allow for nav-fixed-top */
-  background-color: #000; }
-
-#tpl-content > :first-child,
-#tpl-content > :first-child > h1,
-#tpl-content > div > :first-child > h1,
-#tpl-content > h1 {
-  margin-top: 0;
-  margin-bottom: .8em; }
-
 .jjm {
   color: red; }
   @media screen and (max-width: 480px) {
@@ -231,76 +360,61 @@ ul.contact.social li {
   padding-left: 1.5em;
   padding-right: 1.5em; }
 
-.page-home #tpl-content {
-  margin-top: 3em;
-  margin-bottom: 3em;
-  background-color: #242424;
-  padding: 1em; }
+.page-home #page-home-hero {
+  background-image: url("../images/hero-house.jpg");
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
+  position: relative; }
 
-.page-home #services .item {
-  text-align: left;
-  padding-bottom: 2em;
-  padding: 1em 1.5em;
-  /*min-height: 490px;*/ }
-
-.page-home #services .item .image-wrapper {
-  padding: 1em; }
-
-.page-home #services .item img {
-  border-radius: 50%;
-  border: 2px solid #666;
-  max-width: 100%;
-  margin: 0 auto; }
-
-.page-home #services .item p {
-  height: 3.5em; }
-
-.page-home #services .item a {
-  margin-top: 2em;
-  text-align: center;
-  padding: .6em 2em .6em 2em; }
-
-.page-home #services .item ul {
-  margin-left: 0;
-  padding-left: 20px; }
-
-.page-home section {
-  overflow-x: hidden; }
-  .page-home section .col-md-12 h2 {
-    text-align: center; }
-  .page-home section .col-md-12 p {
+.page-home #page-home-hero-reveal {
+  position: absolute;
+  right: 0;
+  bottom: 22%;
+  width: 50%;
+  padding: 2em;
+  background-color: rgba(255, 255, 255, 0.7); }
+  .page-home #page-home-hero-reveal h1 {
+    color: #1e366c;
+    font-family: 'Open Sans', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 100;
     text-align: center;
-    margin-bottom: 3em;
-    color: #727272; }
+    margin: 0; }
+  @media screen and (max-width: 480px) {
+    .page-home #page-home-hero-reveal {
+      width: 75%; }
+      .page-home #page-home-hero-reveal h1 {
+        font-size: 1.2em; } }
 
-.page-home .bkgrd-theme {
-  background-color: #bc101a;
-  color: white; }
+.page-home .three-points {
+  font-size: 1.5em;
+  padding: 4em 0;
+  font-weight: 100;
+  font-family: 'Open Sans', 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+  .page-home .three-points .icon {
+    font-size: 3em;
+    color: #cccccc;
+    text-align: center; }
+  .page-home .three-points .wrapper {
+    padding: 0 1em; }
+  .page-home .three-points .desc {
+    padding-top: 2em; }
+  .page-home .three-points.one {
+    background-color: #fff; }
+  .page-home .three-points.two {
+    background-color: #ebebeb; }
 
-.page-home .bkgrd-section {
-  padding: 1em; }
-  .page-home .bkgrd-section h2 {
-    font-size: 300%;
-    color: #840000; }
-
-.page-home .testimonials {
-  margin: 1em 0; }
-  .page-home .testimonials blockquote img {
-    border-radius: 50%;
-    float: right;
-    max-height: 100px; }
-
-.page-home .home-sections section {
-  padding: 3em 0; }
-  @media screen and (max-width: 767px) {
-    .page-home .home-sections section {
-      padding: 1em 0; } }
-  .page-home .home-sections section .wrapper {
-    padding: 1em; }
-
-.page-home .home-sections .text-section p,
-.page-home .home-sections .text-section td {
-  font-size: 16px; }
+.page-home .quoted-section {
+  background-color: #aaa7a7;
+  padding: 0; }
+  .page-home .quoted-section .quote {
+    font-size: 1.8em;
+    font-weight: 100;
+    font-style: italic;
+    padding: 2em;
+    margin: 1em 0 0 0; }
+  .page-home .quoted-section img {
+    padding: 3em 3em 0 2em; }
 
 .home-sections section:nth-child(3n+1) {
   background-color: #151515; }
@@ -463,16 +577,17 @@ a .down-arrow-circle:focus {
   margin-bottom: 1.5em; }
 
 #article-tiled-list .article-item:hover {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.05);
   box-shadow: rgba(255, 255, 255, 0.7) 1px 1px 15px;
   transition: all ease-in-out .2s; }
 
 @media (max-width: 992px) {
-  /*#article-tiled-list .article-item img {
+  #article-tiled-list {
+    /*#article-tiled-list .article-item img {
                 max-width: 50%;
-            }*/
-  #article-tiled-list .article-item {
-    padding: 1em; } }
+            }*/ }
+    #article-tiled-list article-item {
+      padding: 1em; } }
 
 /* insure max size of featured images on tablet & mobile */
 @media (max-width: 767px) {
@@ -524,20 +639,40 @@ a .down-arrow-circle:focus {
       margin: 0 auto;
       padding: 1.5em; } }
 
+#article-tiled .contact {
+  margin-top: 1.5em; }
+  #article-tiled .contact p {
+    font-size: 1.3em;
+    font-weight: bold;
+    margin: 0; }
+  #article-tiled .contact ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0 0 1em 0; }
+    #article-tiled .contact ul li .fa {
+      padding-right: .5em; }
+
+.widget-latest-x-articles, .widget-latest-x-articles a {
+  color: #888; }
+
 .widget-latest-x-articles ul {
   list-style: none;
   padding: .6em;
-  background-color: #222;
+  background-color: #fff8e6;
   border-radius: 1.5em;
-  border: 1px solid #333; }
+  border: 1px solid #333;
+  background-color: white;
+  border: 0;
+  margin: 0;
+  padding: 0; }
   .widget-latest-x-articles ul li {
     padding-bottom: 0;
     display: block; }
     .widget-latest-x-articles ul li a {
-      color: inherit;
-      color: #888;
       display: block;
       padding: .5em .4em; }
+      .widget-latest-x-articles ul li a:hover {
+        background-color: rgba(0, 0, 0, 0.05); }
   .widget-latest-x-articles ul li.title a {
     text-transform: uppercase;
     font-weight: bold;
@@ -545,8 +680,21 @@ a .down-arrow-circle:focus {
     color: #666;
     letter-spacing: .1em; }
     .widget-latest-x-articles ul li.title a:hover {
-      background: rgba(255, 255, 255, 0.1);
-      color: white; }
+      background: rgba(0, 0, 0, 0.05);
+      color: #000; }
+  .widget-latest-x-articles ul li {
+    margin: 0; }
+
+.widget-latest-x-articles .title {
+  margin: 0 0 0 .4em; }
+  .widget-latest-x-articles .title a {
+    color: #1e366c;
+    display: block;
+    border-bottom: 1px dotted #ccc;
+    padding: .4em .2em .2em 0;
+    margin: 0 0 .2em 0; }
+    .widget-latest-x-articles .title a:hover {
+      background-color: rgba(0, 0, 0, 0.05); }
 
 .testimonials blockquote img {
   border-radius: 50%;
@@ -631,6 +779,41 @@ table.cages-price-table td {
     width: 85%;
     margin: 0 auto; } }
 
+#page-property-listing .property {
+  padding: 1em;
+  border-top: 1px solid #efefef; }
+  #page-property-listing .property:last-child {
+    border-bottom: 1px solid #efefef; }
+  #page-property-listing .property:hover {
+    background-color: rgba(0, 0, 0, 0.05); }
+  #page-property-listing .property .header {
+    margin: 0; }
+  #page-property-listing .property .abstract {
+    margin-top: .4em; }
+  #page-property-listing .property .icon {
+    text-align: center; }
+    #page-property-listing .property .icon i {
+      font-size: 7em; }
+
+#widget-article-categories .header {
+  padding-bottom: .2em;
+  border-bottom: 1px dotted; }
+
+#widget-article-categories ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  #widget-article-categories ul li {
+    display: inline-block;
+    border: 1px solid silver;
+    font-size: .9em;
+    font-weight: 100;
+    border-radius: 5px;
+    padding: .4em;
+    margin: .2em; }
+    #widget-article-categories ul li.active {
+      background-color: #f2f2f2; }
+
 /* Fix for jump of static nav to fixed nav */
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse, .navbar-static-top .navbar-collapse {
   padding-right: 15px;
@@ -698,6 +881,9 @@ table.cages-price-table td {
 .btn-danger.btn-outline:hover {
   color: #fff; }
 
+.dropdown-search {
+  width: 250px; }
+
 .mrcms-admin-nav-bar {
   top: initial !important;
   bottom: 0 !important; }
@@ -707,6 +893,13 @@ html {
 
 body.mrcms-admin-bar-on {
   margin-bottom: 30px; }
+
+body.ckEditorBodyClass,
+html.cke_panel_container body {
+  background-color: white !important; }
+
+.cke_combopanel {
+  width: 250px !important; }
 
 body.is-loading *, body.is-loading *:before, body.is-loading *:after {
   -webkit-animation: none !important;
