--- a/MrCMS.Web/Content/css/sass/lib/_fade-in.scss
+++ b/MrCMS.Web/Content/css/sass/lib/_fade-in.scss
@@ -39,7 +39,7 @@ body.is-loading *, body.is-loading *:before, body.is-loading *:after {
 /* for ScrollReveal left/right transistions to keep viewport width on mobile devices */
 #tpl-content {
     overflow-x: hidden;
-    overflow-y: hidden; //had to add this as well becuase without it, it caused a vertical scrollbar
+    overflow-y: hidden; //had to add this as well because without it, it caused a vertical scrollbar
 }
 
 
