--- a/MrCMS.Web/Content/css/sass/modules/_all.scss
+++ b/MrCMS.Web/Content/css/sass/modules/_all.scss
@@ -1,3 +1,4 @@
 ﻿@import "_mixins.scss";
 @import "../../../lib/breakpoint-sass/stylesheets/_breakpoint.scss";
 @import "../../../lib/susy/sass/_susy.scss";
+@import "../../../lib/scut/dist/_scut.scss";
