--- a/MrCMS.Web/Content/css/sass/site.scss
+++ b/MrCMS.Web/Content/css/sass/site.scss
@@ -1,8 +1,8 @@
 ﻿@import "partials/_base.scss";
 @import "partials/_html.scss";
 @import "partials/_nav.scss"; 
-@import "partials/_content.scss"; 
-@import "partials/_footer.scss";
+@import "partials/_tpl-content.scss"; 
+@import "partials/_tpl-footer.scss";
 @import "partials/_home.scss";
 @import "partials/_article.scss";
 @import "partials/_testimonials.scss";
