--- a/MrCMS.Web/Content/css/sass/partials/_nav.scss
+++ b/MrCMS.Web/Content/css/sass/partials/_nav.scss
@@ -1,156 +1,183 @@
 ﻿@import "_base.scss";
 
-nav  {
-    
-        font-family: 'Open Sans', 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, 'Helvetica Neue', Arial, Helvetica,  sans-serif;
-        font-weight: 100;
-        font-size: 1.2em;
+nav {
+    font-family: 'Open Sans', 'Roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    font-size: 1.2em;
 
-        .navbar-brand {
-            padding: 2px;
+    .navbar-brand {
+        padding: 2px;
+        display: block;
+    }
+
+    .navbar-brand img {
+        height: 45px;
+    }
+
+    //reset nav search form width & stray border
+    #nav-links-right .navbar-form { 
+        min-width: 220px;
+        border: 0;
+    }
+
+    
+    //fixes for search icon & dropdown on collapse
+    @include breakpoint($tablet) {
+        #nav-links-right {
+            position: absolute;
+            top: 0;
+            right: 70px;
+        }
+
+            #nav-links-right .dropdown-menu {
+                position: absolute;
+                top: 100%;
+                left: 0;
+            }
+
+        #nav-links-right > li {
+            float: left;
+        }
+
+        .navbar-nav {
+            margin: 0;
+        }
+
+            .navbar-nav > li > a {
+                padding-top: 15px;
+                padding-bottom: 15px;
+            }
+
+        #nav-links-right .dropdown-menu {
+            right: 0;
+            left: auto;
+        }
+
+        .open > .dropdown-menu {
             display: block;
         }
+
+        .navbar-nav .open .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            float: left;
+            min-width: 160px;
+            padding: 5px 0;
+            font-size: 14px;
+            list-style: none;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ccc;
+            border-top: none;
+        }
+
+        #nav-links-right .dropdown-menu > li > a {
+            display: block;
+            padding: 3px 20px;
+            clear: both;
+            font-weight: normal;
+            line-height: 1.428571429;
+            color: #333;
+            white-space: nowrap;
+        }
+    }
+
+    //max-width: 770px
+    @media (min-width: $tablet-width + 1px) {
+        &.navbar-h-expanded,
+        &.navbar-h-expanded.nav-sm {
+            transition: all 1.5s;
+        }
+
+
+        &.navbar-h-expanded,
+        &.navbar-h-expanded .navbar-brand,
+        &.navbar-h-expanded .navbar-nav > li {
+            transition: all 1.5s;
+            height: 150px;
+            /*padding-top: 30px;*/
+        }
+
+        /* change to all (.navbar-h-expanded .navbar-nav > li) to (.navbar-h-expanded .navbar-nav > li > a) with line-height and remove padding-top to make hover entire top to bottom */
+        /*.navbar-brand,*/
+        &.navbar-h-expanded .navbar-nav > li {
+            transition: all 1.5s;
+            /*line-height: 150px;*/
+            padding-top: 50px;
+        }
+
+        &.navbar-h-expanded .navbar-brand img {
+            /* padding: 0;*/
+            /*height:80px;*/
+            height: 140px;
+            transition: all 1.5s;
+            padding-top: 5px;
+            margin-top: 0;
+        }
+
          
-        .navbar-brand img {
-            height: 45px;
+        &.navbar-h-expanded.nav-sm,
+        &.navbar-h-expanded.nav-sm .navbar-brand,
+        &.navbar-h-expanded.nav-sm .navbar-nav > li {
+            transition: all 1.5s;
+            height: 50px;
+            padding-top: 0;
+        }
+        /*nav.navbar-h-expanded.nav-sm .navbar-brand,*/
+        &.navbar-h-expanded.nav-sm .navbar-nav > li {
+            line-height: 50px;
         }
 
-
-
-
-        @media (min-width: 770px) {
-
-            &.navbar-h-expanded,
-            &.navbar-h-expanded.nav-sm {
-                transition: all 1.5s;
-            }
-
-        
-            &.navbar-h-expanded,
-            &.navbar-h-expanded .navbar-brand,
-            &.navbar-h-expanded .navbar-nav > li  {
-                transition: all 1.5s;
-                height: 150px;
-                /*padding-top: 30px;*/
-            }
-
-            /* change to all (.navbar-h-expanded .navbar-nav > li) to (.navbar-h-expanded .navbar-nav > li > a) with line-height and remove padding-top to make hover entire top to bottom */
-            /*.navbar-brand,*/
-            &.navbar-h-expanded .navbar-nav > li  {
-                transition: all 1.5s;
-                /*line-height: 150px;*/
-                padding-top: 50px;
-            }
-
-            &.navbar-h-expanded .navbar-brand img {
-                /*height:80px;*/
-                height: 140px;
-                transition: all 1.5s;
-                padding-top: 5px;
-                margin-top:0;
-            }
-
-
-            &.navbar-h-expanded.nav-sm,
-            &.navbar-h-expanded.nav-sm .navbar-brand,
-            &.navbar-h-expanded.nav-sm .navbar-nav > li  {
-                transition: all 1.5s;
-                height: 50px;
-                padding-top: 0;
-            }
-
-            /*nav.navbar-h-expanded.nav-sm .navbar-brand,*/
-            &.navbar-h-expanded.nav-sm .navbar-nav > li  {
-                line-height: 50px;
-            }
-
-            &.navbar-h-expanded.nav-sm navbar,
-            &.navbar-h-expanded.nav-sm .navbar-brand img {
-                height: 50px;
-                /*padding: 5px 5px;*/
-                padding: 1px 0;
-                margin-top:0;
-            }
-
-            &.navbar-h-expanded .navbar-brand {
-                padding: 0;
-                padding-left:5px;
-            }
-
+        &.navbar-h-expanded.nav-sm navbar,
+        &.navbar-h-expanded.nav-sm .navbar-brand img {
+            height: 50px;
+            /*padding: 5px 5px;*/
+            padding: 1px 0;
+            margin-top: 0;
         }
 
-        /* 999 , h70*/
-        @media (max-width: 999px) {
-            &.navbar-h-expanded .navbar-brand img {
-                height: 70px;
-                margin-top:35px;
-            }
+        &.navbar-h-expanded .navbar-brand {
+            padding: 0;
+            padding-left: 5px;
+        }
+    }
 
-            &.navbar-h-expanded  {
-                font-size: 1em!important;
-            }
+    // max-width: 999px 
+    @media (max-width: 999px) {
+        &.navbar-h-expanded .navbar-brand img {
+            /* padding: 2px; */
+            height: 70px;
+            margin-top: 35px;
         }
 
-        //769
-        @media (max-width: 769px) {
-            &.navbar-h-expanded .navbar-brand img {
-                height: 100%;
-                margin-top:0;
-            }
+        &.navbar-h-expanded {
+            font-size: 1em !important;
+        }
+    }
 
-            .navbar-brand {
-                padding: 1px 1px 1px 5px;
-            }
+    //max-width: 769px
+    @media(max-width: $tablet-width) {
+    //@media (max-width: 769px) {
+        &.navbar-h-expanded .navbar-brand img {
+            /* padding: 3; */
+            height: 100%;
+            margin-top: 0;
         }
 
+        .navbar-brand {
+            padding: 1px 1px 1px 5px;
+        }
+    }
 
 }
 
 //Bootstrap Nav Fixes
 
-    .navbar-default {
-        /*background-color: #ffe7a2 !important;*/
-        /*background-color: #dcedff;*/
-        background-color: #fff8e6;
-        /*border-color: #e7e7e7;*/
-    }
-
-   #tpl-footer {
-        //background-color: #ffe7a2 !important;
-        //background-color: #bebebe !important;
-        //background-color: #fff8e6 !important;
-        /*background-color: #dcedff;*/
-        /*border-color: #e7e7e7;*/
-        border-top: 1px solid #e7e7e7;
-    }
 
    .navbar-default {
        background-color: #fff8e6 !important;
    }
-
-//   #tpl-page-wrapper {
-//       background-color: #fff;
-//         
-//      
-//   }
-//
-//   #tpl-content-wrapper {
-//        /* for sticky header */
-//        padding-top: 150px;
-//
-//        @include breakpoint($tablet) {
-//            padding-top: 50px;
-//        }
-//   }
-
-//   #tpl-content {
-//       margin-top: 2em;
-//   }
-
-//   .navbar {
-//       //margin-bottom: 0;
-//   }
-
 
 
     /* Bootstrap nav override active */
